posible arreglo control

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           return;
         }
 
-        controls = new THREE.DeviceOrientationControls(camera, true);
+        controls = new DeviceOrientationControls(camera);
         controls.connect();
         controls.update();
 
