arreglo vista movil
probando que cuando pinchemos en el smartphone, se desbloquee la imagen.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,12 @@
 						controls.connect();
 
 					}, false );
+					controls.addEventListener( 'connect', function () {
 
+						instructions.style.display = 'none';
+						blocker.style.display = 'none';
+
+					} );
 					
 					
 				} else {
