--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
 
 				} else {
 					effect.render(scene, camera);
+					controls.update();
 					fpVrControls.update(clock.getDelta());
 				}
 
