--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
 
 					};
 
-					document.addEventListener( 'keydown', onKeyDown, false );
-					document.addEventListener( 'keyup', onKeyUp, false );
+					//document.addEventListener( 'keydown', onKeyDown, false );
+					//document.addEventListener( 'keyup', onKeyUp, false );
 
 					raycaster = new THREE.Raycaster( new THREE.Vector3(), new THREE.Vector3( 0, - 1, 0 ), 0, 10 );
 				} 
@@ -300,11 +300,7 @@
 
 				}
 
-				//
 
-
-
-				//
 
 				window.addEventListener( 'resize', onWindowResize, false );
 
