--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				if(is_mobile){
 					scene.add(camera);
 					
-					effect = new StereoEffect(renderer);
+					//effect = new StereoEffect(renderer);
 			
 					controls = new DeviceOrientationControls(camera);
 					controls.connect();
