--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div id= "puntuacion"></div>
 		</div>
 		
-		<div id="blocker"> 
+		<!--<div id="blocker"> 
 				
 				<div id="instructions">
 					<span style="font-size:36px">Click to play</span>
@@ -27,7 +27,7 @@
 					Move: WASD<br/>
 					Look: MOUSE or Device Orientation
 				</div>
-		</div>
+		</div> -->
 		
 		
 			
