--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 
 					document.addEventListener( 'click', function () {
 						fullscreen();
+						cronometrar();
 						instructions.style.display = 'none';
 						blocker.style.display = 'none';
 
