--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 					
 
 					document.addEventListener( 'click', function () {
-						fullscreen();
+						//fullscreen();
 						cronometrar();
 						instructions.style.display = 'none';
 						blocker.style.display = 'none';
