--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 				} 
 				var click2 = function () {
 						fullscreen();
-						cronometrar();
+						parar();
 						instructions.style.display = 'none';
 						blocker.style.display = 'none';
 						document.addEventListener( 'click', click1, false );
