--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 						cronometrar();
 						instructions.style.display = 'none';
 						blocker.style.display = 'none';
+						document.removeEventListener( 'click', click1, false );
 						document.addEventListener( 'click', click2, false );
 
 				} 
