--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 				scene = new THREE.Scene();
 				scene.background = new THREE.Color( 0xf0f0ff);
-				//scene.fog = new THREE.Fog( 0xffffff, 0, 750 );
+				scene.fog = new THREE.Fog( 0xCECECE, 0, 200 );
 				
 
 				var light = new THREE.HemisphereLight( 0xeeeeff, 0x777788, 0.75 );
