--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 					sound.setRefDistance( 5);
 					sound.setRolloffFactor ( 0.5 );
 					sound.setLoop( true );
-					//sound.play();
+					sound.play();
 				});
 
 				// create an object for the sound to play from
